added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Food donations can be made in several ways, including donating directly to food banks, hosting food drives, or making financial donations to support food bank operations. Many organizations accept non-perishable food items at collection points, and some allow online donations to be sent directly to their facilities. </p>
+
+    </div>
 </body>
 </html>
