added the second and third blog

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <div>
         <h3>My first website</h3>
         <p>Food donations can be made in several ways, including donating directly to food banks, hosting food drives, or making financial donations to support food bank operations. Many organizations accept non-perishable food items at collection points, and some allow online donations to be sent directly to their facilities. </p>
-
+    </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Food donations can be made in several ways, including donating directly to food banks, hosting food drives, or making financial donations to support food bank operations. Many organizations accept non-perishable food items at collection points, and some allow online donations to be sent directly to their facilities. </p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Food donations can be made in several ways, including donating directly to food banks, hosting food drives, or making financial donations to support food bank operations. Many organizations accept non-perishable food items at collection points, and some allow online donations to be sent directly to their facilities. </p>
     </div>
 </body>
 </html>
